# rst03-app-error

./: .env.example  .gitignore  Cargo.toml  db_fresh_setup.sh  docker-compose.yml
migrations/: 0001_credentials.down.sql  0001_credentials.up.sql
src/: db.rs  errors.rs  lib.rs  main.rs
src/auth/: handler.rs  mod.rs  model.rs  routes.rs  services.rs
